# actix-web-handle-error-and-logging

./: Cargo.toml  README.md  logging.md  middleware.md
macros/: Cargo.toml
macros/src/: lib.rs  response_error.rs  use_case_error.rs  utils.rs
src/: lib.rs  main.rs  routers.rs  use_cases.rs
web/: Cargo.toml
web/src/: main.rs  routers.rs  telemetry.rs  use_cases.rs
