[package]
name = "actix-web-handle-error"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
env_logger = "0.11.3"
log = "0.4.21"
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["std"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
