[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["std"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
